products/governance-api/cd/base/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: governance-api
  namespace: governance-api
  labels:
    "app.kubernetes.io/name": "governance-api"
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
      name: http
  selector:
    "app.kubernetes.io/name": "governance-api"
